force-app/main/default/objects/Opportunity/fields/Construction_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Construction_Site_Address__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-728</description>
    <label>Construction Site Address</label>
    <type>Address</type>
</CustomField>