force-app/main/default/objects/Opportunity/fields/Construction_Volume__c.field-meta.xml
<CustomField>
    <fullName>Construction_Volume__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <label>Construction Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>