force-app/main/default/objects/Opportunity/fields/Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. ZR
3. Helper field, set during Lead Conversion, to determine if an opportunity was created form a Lead in Reports</description>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>