force-app/main/default/objects/Opportunity/fields/Exact_Source__c.field-meta.xml
<CustomField>
    <fullName>Exact_Source__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <label>Exact Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Exact_Source</valueSetName>
    </valueSet>
</CustomField>