force-app/main/default/objects/Opportunity/fields/Further_Loss_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Further_Loss_Reasons__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.SF-170</description>
    <label>Further Loss Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>