force-app/main/default/objects/Opportunity/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>1. Not integration relevant
2. ZR-742
3. Helper Field to show the Id of the converted Lead on the Opportunity</description>
    <label>Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>