force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <inlineHelpText>If you selected &apos;Prize&apos;, &apos;Submission Result&apos; or &apos;Other&apos; please explain the reason in the field below.</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>Loss_Reason</valueSetName>
    </valueSet>
</CustomField>