force-app/main/default/objects/Opportunity/fields/Opportunity_with_Quote__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_with_Quote__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. This is a helper field to report on Opportunities in the stages &quot;Won&quot; or &quot;Qutation Phase&quot;</description>
    <formula>IF((ISPICKVAL(StageName, &quot;Closed Won&quot;)|| ISPICKVAL(StageName, &quot;Quotation Phase&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity with Quote</label>
    <type>Checkbox</type>
</CustomField>