force-app/main/default/objects/Opportunity/fields/Over_Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Over_Reminder_Days__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper field to determine, whether an Opportunity has been dormant for long enough to send a Notification via the ZR_Scheduled_Overdue_Opportunity_Reminder, based on the User Profile setting in the field Opportunity_Reminder__c.</description>
    <formula>(TODAY() - DATEVALUE(LastModifiedDate))-
(Owner.Opportunity_Reminder__c *7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Reminder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>