force-app/main/default/objects/Opportunity/fields/Project_Reference_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference_from_customer__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Project Reference (from customer)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>