force-app/main/default/objects/Opportunity/fields/Requirement_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Period_Start__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <label>Requirement Period Start</label>
    <type>Date</type>
</CustomField>