force-app/main/default/objects/Opportunity/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>