force-app/main/default/objects/Opportunity/fields/Submission_Result__c.field-meta.xml
<CustomField>
    <fullName>Submission_Result__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Submission Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>