force-app/main/default/objects/Opportunity/recordTypes/ZR_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ZR_Opportunity</fullName>
    <active>true</active>
    <businessProcess>ZR_Sales Process</businessProcess>
    <description>Default Record Type</description>
    <label>Opportunity</label>
</RecordType>