force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_99999_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_99999_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{5}&quot;). Example: 99999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
OR(
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;DZ&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;AS&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;BA&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;BR&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;IC&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MP&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;HR&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;CU&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;EE&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;FI&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;FR&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;GF&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;DE&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;GP&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;GU&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;ID&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;IT&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;LT&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MY&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MH&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MQ&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;YT&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;FM&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MC&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;ME&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MA&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;NC&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;PK&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;PW&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;RE&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;SM&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;RS&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;ES&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;TH&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;TR&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;UA&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;US&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;VI&quot;)
)),
NOT(REGEX(Construction_Site_Address__PostalCode__s , (&quot;\\d{5}&quot;))),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of five numbers. Example: 99999</errorMessage>
</ValidationRule>