force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_999_99_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999_99_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}-\\d{2}&quot;). Example: 999-99</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
OR(
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;CZ&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;GR&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;SK&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;SE&quot;)
)),
NOT(REGEX(Construction_Site_Address__PostalCode__s , (&quot;\\d{3}[ ]\\d{2}&quot;))),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should start with three numbers, followed by a space and two numbers. Example: 999 99</errorMessage>
</ValidationRule>