force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_999_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}&quot;). Example: 999.</description>
    <errorConditionFormula>IF(
OR(
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;FO&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;IS&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s , &quot;MG&quot;),
ISPICKVAL(Construction_Site_Address__CountryCode__s ,&quot;PG&quot;)
),
NOT(REGEX( Construction_Site_Address__PostalCode__s , (&quot;\\d{3}&quot;))),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of three numbers. Example: 999</errorMessage>
</ValidationRule>