force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_AZ_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AZ_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}&quot;) or (&quot;\\d{6}&quot;). Example: 9999 or 999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
ISPICKVAL( Construction_Site_Address__CountryCode__s ,&quot;AZ&quot;)
),
NOT(
OR(
REGEX(Construction_Site_Address__PostalCode__s, (&quot;\\d{4}&quot;)),
REGEX(Construction_Site_Address__PostalCode__s, (&quot;\\d{6}&quot;))
)
),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of four or six numbers. Example: 9999 or 999999</errorMessage>
</ValidationRule>