force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_BN_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BN_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z]{2}\\d{3,4}&quot;). Example: AA9999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;BN&quot;)
),
NOT(REGEX(Construction_Site_Address__PostalCode__s, (&quot;[A-Z]{2}\\d{3,4}&quot;))),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters followed by three or four numbers. Example: AA9999</errorMessage>
</ValidationRule>