force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_BR_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BR_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{8}&quot;) or (&quot;\\d{5}[-]\\d{3}&quot;). Example: 99999999 or 99999-999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;BR&quot;)
),
NOT(
OR(
REGEX(Construction_Site_Address__PostalCode__s,(&quot;\\d{8}&quot;)),
REGEX(Construction_Site_Address__PostalCode__s,(&quot;\\d{5}[-]\\d{3}&quot;))
)
),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of eight numbers and can include a hyphen between the fifth and the sixth number. Example: 99999999 or 99999-999.</errorMessage>
</ValidationRule>