force-app/main/default/objects/Opportunity/validationRules/ZR_ZipCode_Validation_JE_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_JE_Opportunity</fullName>
    <active>true</active>
    <description>SF-93 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;). Example: AA9 9AA.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Construction_Site_Address__PostalCode__s )),
ISPICKVAL( Construction_Site_Address__CountryCode__s , &quot;JE&quot;)
),
NOT(REGEX(Construction_Site_Address__PostalCode__s, (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;))),
FALSE)
&amp;&amp;  $Permission.Core_Opportunity_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Construction_Site_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters, a number, followed by a space, a number and two uppercase letters. Example: AA9 9AA</errorMessage>
</ValidationRule>